# rocq-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  evals-tier2.yml
evals/: README.md  __init__.py
evals/corpus/find_lemma_add_comm/: task.yaml
evals/corpus/find_lemma_mul_comm/: task.yaml
evals/corpus/fix_missing_import/: task.yaml
evals/corpus/fix_missing_import/files/: NeedsLia.v
evals/corpus/fix_wrong_tactic/: task.yaml
evals/corpus/fix_wrong_tactic/files/: Broken.v
evals/corpus/prove_add_0_r/: task.yaml
evals/corpus/prove_add_0_r/files/: Add0r.v
evals/corpus/prove_andb_comm/: task.yaml
evals/corpus/prove_andb_comm/files/: AndbComm.v
evals/corpus/prove_app_nil_r/: task.yaml
evals/corpus/prove_app_nil_r/files/: AppNil.v
evals/corpus/prove_negb_involutive/: task.yaml
evals/corpus/prove_negb_involutive/files/: Negb.v
evals/corpus/prove_with_step_multi/: task.yaml
evals/corpus/prove_with_step_multi/files/: AddComm.v
evals/runner/: __init__.py  common.py  grade.py  run_agent.py  scenarios.py
scripts/: gen_docs.py
src/rocq_mcp/: compile.py  compile_enrichment.py  config.py  diag.py  envelope.py  guide_concurrency.md  guide_failures.md  guide_responses.md  guide_workflows.md  health.py  interactive.py  pet_runtime.py  proof_walk.py  schemas.py  server.py  taxonomy.py  workspace.py
src/rocq_mcp/guides/: concurrency.md  failures.md  responses.md  workflows.md
tests/: conftest.py  test_assumptions.py  test_auto_solve.py  test_bullet_focus.py  test_check.py  test_compile.py  test_compile_file.py  test_degraded.py  test_diag.py  test_docs_sync.py  test_domain_wave.py  test_envelope_contract.py  test_evals_meta.py  test_evals_tier1.py  test_focus_depth.py  test_goal_at.py  test_goals_format.py  test_health.py  test_hover.py  test_integration.py  test_max_results.py  test_mcp_surface.py  test_memory_watchdog.py  test_notations.py  test_proof_walk.py  test_query.py  test_real_pet_integration.py  test_schemas.py  test_server.py  test_stale_vo.py  test_staleness.py  test_start.py  test_step_multi.py  test_taxonomy.py  test_timeout.py  test_toc.py  test_truncate.py  test_verify.py
