[project]
name = "rocq-mcp"
version = "0.3.1"
description = "MCP server for Rocq/Coq proof development"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "psutil>=5.9",
    "pytanque @ git+https://github.com/LLM4Rocq/pytanque@v0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "black>=24.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyyaml>=6.0",
]

[project.scripts]
rocq-mcp = "rocq_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rocq_mcp = ["guides/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Hang protection: this codebase drives subprocesses (coqc, pet) and holds
# locks across threads — a wedged call must fail the test, not the CI job.
# Real-toolchain integration files override with @pytest.mark.timeout(300).
addopts = "--timeout=120 --timeout-method=thread"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = [
    "E501",     # line length is black's job; docstrings routinely exceed it
    "B904",     # raise-without-from inside except: pre-existing style, revisit
    "ASYNC109", # timeout= params on async tools are part of the MCP tool contract
    # Pre-existing blocking file/subprocess I/O inside async tool bodies.
    # Real findings, but fixing them means threading work through
    # asyncio.to_thread — tracked for the pet_runtime/tools split.
    "ASYNC221",
    "ASYNC230",
    "ASYNC240",
]

[tool.ruff.lint.per-file-ignores]
# Test classes use plain class-attribute fixtures/pytestmark lists and
# loose pytest.raises match strings; not worth churning.
"tests/*" = ["RUF012", "RUF043"]

[tool.ruff.lint.isort]
known-first-party = ["rocq_mcp"]

[tool.mypy]
python_version = "3.11"
files = ["src/rocq_mcp"]
check_untyped_defs = true
warn_redundant_casts = true
# The codebase uses FastMCP's `ctx: Context = None` idiom on every tool
# wrapper (Context params are injected, never client-supplied); accept
# the implicit Optional rather than churning 15 signatures.
implicit_optional = true
# The big envelope-factory modules (server/interactive/compile) are
# deliberately dict[str, Any]-shaped; strictness is ratcheted per-module
# below instead of globally.

[[tool.mypy.overrides]]
module = ["pytanque.*", "psutil.*"]
ignore_missing_imports = true

# Leaf modules are born strict; the ratchet grows toward the trunk as
# the decomposition proceeds.
[[tool.mypy.overrides]]
module = [
    "rocq_mcp.config",
    "rocq_mcp.taxonomy",
    "rocq_mcp.envelope",
    "rocq_mcp.schemas",
    "rocq_mcp.diag",
    "rocq_mcp.proof_walk",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
