[project]
name = "rocq-mcp"
version = "0.3.1"
description = "MCP server for Rocq/Coq proof development"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "psutil>=5.9",
    "pytanque @ git+https://github.com/LLM4Rocq/pytanque@v0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "black>=24.0",
]

[project.scripts]
rocq-mcp = "rocq_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rocq_mcp = ["guides/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
